@@ -778,6 +778,10 @@ WIDGET_DEFAULT = {
         "bkg_color_end": "#666666",
         "low_fuel_lap_threshold": 2,
         "warning_color_low_fuel": "#FF2200",
+        "show_low_fuel_warning_flash": True,
+        "number_of_warning_flashes": 10,
+        "warning_flash_highlight_duration": 0.4,
+        "warning_flash_interval": 0.4,
         "show_fuel_level_bar": True,
         "fuel_level_bar_height": 10,
         "highlight_color_fuel_level": "#FFFFFF",
@@ -2559,6 +2563,10 @@ WIDGET_DEFAULT = {
         "bkg_color_bias": "#666666",
         "low_energy_lap_threshold": 2,
         "warning_color_low_energy": "#FF22FF",
+        "show_low_energy_warning_flash": True,
+        "number_of_warning_flashes": 10,
+        "warning_flash_highlight_duration": 0.4,
+        "warning_flash_interval": 0.4,
         "show_energy_level_bar": True,
         "energy_level_bar_height": 10,
         "highlight_color_energy_level": "#FFFFFF",
