@@ -21,9 +21,11 @@ Fuel Widget
 """
 
 from .. import calculation as calc
+from ..api_control import api
 from ..module_info import minfo
 from ..units import set_unit_fuel
 from ._base import Overlay
+from ._common import WarningFlash
 from ._painter import FuelLevelBar
 
 
@@ -263,9 +265,24 @@ class Realtime(Overlay):
         layout_lower.addWidget(self.bar_save, 1, 3)
         layout_lower.addWidget(self.bar_end, 1, 4)
 
+        # Last data
+        self.warn_flash = WarningFlash(
+            self.wcfg["warning_flash_highlight_duration"],
+            self.wcfg["warning_flash_interval"],
+            self.wcfg["number_of_warning_flashes"],
+        )
+
     def timerEvent(self, event):
         """Update when vehicle on track"""
         is_low_fuel = minfo.fuel.estimatedLaps <= self.wcfg["low_fuel_lap_threshold"]
+        if self.wcfg["show_low_fuel_warning_flash"]:
+            is_low_fuel = self.warn_flash.state(api.read.timing.elapsed(), is_low_fuel)
+            if is_low_fuel:
+                padding = 0.00000001
+            else:
+                padding = 0
+        else:
+            padding = 0
 
         # Estimated end remaining
         amount_end = self.unit_fuel(minfo.fuel.amountEndStint)
@@ -273,15 +290,15 @@ class Realtime(Overlay):
 
         # Remaining
         amount_curr = self.unit_fuel(minfo.fuel.amountCurrent)
-        self.update_fuel(self.bar_curr, amount_curr, self.bar_style_curr[is_low_fuel])
+        self.update_fuel(self.bar_curr, amount_curr + padding, self.bar_style_curr[is_low_fuel])
 
         # Total needed
         if self.wcfg["show_absolute_refueling"]:
             amount_need = calc.sym_max(self.unit_fuel(minfo.fuel.neededAbsolute), 9999)
-            self.update_fuel(self.bar_need, amount_need, self.bar_style_need[is_low_fuel])
+            self.update_fuel(self.bar_need, amount_need + padding, self.bar_style_need[is_low_fuel])
         else:
             amount_need = calc.sym_max(self.unit_fuel(minfo.fuel.neededRelative), 9999)
-            self.update_fuel(self.bar_need, amount_need, self.bar_style_need[is_low_fuel], "+")
+            self.update_fuel(self.bar_need, amount_need + padding, self.bar_style_need[is_low_fuel], "+")
 
         # Estimated consumption
         used_last = self.unit_fuel(minfo.fuel.estimatedConsumption)
